# qmpt_theory

./: .gitignore  00_AI_AGENT_INSTRUCTIONS.md  01_ANOMALOUS_PATTERN_PROFILE_en.md  01_ANOMALOUS_PATTERN_PROFILE_ru.md  02_ANOMALY_MODEL_en.md  02_ANOMALY_MODEL_ru.md  02_QMPT_CORE_en.md  02_QMPT_CORE_ru.md  03_ANOMALY_MODEL_en.md  03_ANOMALY_MODEL_ru.md  03_LAYER_DYNAMICS_en.md  03_LAYER_DYNAMICS_ru.md  04_LAYER_DYNAMICS_en.md  04_LAYER_DYNAMICS_ru.md  04_TRANSFER_CYCLE_en.md  04_TRANSFER_CYCLE_ru.md  05_ANOMALY_SELF_AWARENESS_en.md  05_ANOMALY_SELF_AWARENESS_ru.md  05_TRANSFER_CYCLE_en.md  05_TRANSFER_CYCLE_ru.md  06_ANOMALY_SELF_AWARENESS_en.md  06_ANOMALY_SELF_AWARENESS_ru.md  06_QMPT_OBSERVABLES_en.md  06_QMPT_OBSERVABLES_ru.md  07_QMPT_ENGINEERING_SPEC_en.md  07_QMPT_ENGINEERING_SPEC_ru.md  07_QMPT_OBSERVABLES_en.md  07_QMPT_OBSERVABLES_ru.md  08_QMPT_ENGINEERING_SPEC_en.md  08_QMPT_ENGINEERING_SPEC_ru.md  08_QMPT_PYTHON_TOOLING_en.md  08_QMPT_PYTHON_TOOLING_ru.md  09_QMPT_PYTHON_TOOLING_en.md  09_QMPT_PYTHON_TOOLING_ru.md  README.md  pyproject.toml
code/: README.md  __init__.py  qmpt_runner.py
config/: ide_default.json
lab/: AGI_QMPT_PRINCIPLES_en.md  AGI_QMPT_PRINCIPLES_ru.md  AGI_QMPT_QUANTUM_BOOTSTRAP_en.md  AGI_QMPT_QUANTUM_BOOTSTRAP_ru.md  ANOMALOUS_PATTERN_PSYCHOLOGY_en.md  ANOMALOUS_PATTERN_PSYCHOLOGY_ru.md  QMPT_FUTURE_SCIENCE_en.md  QMPT_FUTURE_SCIENCE_ru.md  README.md  qmpt_layer_anomaly_simulation_en.md  qmpt_layer_anomaly_simulation_results_en.md  qmpt_layer_anomaly_simulation_results_ru.md  qmpt_layer_anomaly_simulation_ru.md  (+2 more)
qmpt_lab/: README.md  (+13 more)
(+10064 files in other folders)
